# evolm

./: .gitignore  README.md
evaluation/cot-eval-harness/: .gitignore  README.md  collect_responses.py  evaluate_responses.py  pyproject.toml
evaluation/cot-eval-harness/cot_eval/: __init__.py
evaluation/cot-eval-harness/cot_eval/evaluation/: Evaluator.py
evaluation/cot-eval-harness/cot_eval/utils/: data_utils.py  math_utils.py  utils.py
evaluation/cot-eval-harness/data/cooked/: AIME2023.jsonl  AIME2024.jsonl  AMC2022.jsonl  AMC2023.jsonl  BoardgameQA500.jsonl  CRUXEval.jsonl  CommonsenseQA.jsonl  FOLIO.jsonl  GPQADiamond.jsonl  GPQAMain.jsonl  GSM8K.jsonl  GSM8KPlatinum.jsonl  HLE.jsonl  MATH.jsonl  MATH500.jsonl  MATHHard.jsonl  MATHLevel1.jsonl  MATHLevel2.jsonl  MATHLevel3.jsonl  MATHLevel4.jsonl  MMLUProBiology.jsonl  MMLUProBusiness.jsonl  MMLUProChemistry.jsonl  MMLUProComputerScience.jsonl  MMLUProEconomics.jsonl  MMLUProEngineering.jsonl  MMLUProHealth.jsonl  MMLUProHistory.jsonl  MMLUProLaw.jsonl  MMLUProMath.jsonl  MMLUProNoMathSTEM.jsonl  MMLUProPhilosophy.jsonl  MMLUProPhysics.jsonl  MMLUProPsychology.jsonl  MMLUSTEM.jsonl  MMLUSTEM500.jsonl  MinervaMath.jsonl  OlympiadBench.jsonl  SciBench.jsonl  StrategyQA.jsonl  (+5 more)
evaluation/cot-eval-harness/scripts/: list_tasks.py
evaluation/cot-eval-harness/scripts/data/: prepare_AIME.py  prepare_AMC.py  prepare_BoardgameQA.py  prepare_CRUXEval.py  prepare_CommonsenseQA.py  prepare_FOLIO.py  prepare_GPQA.py  prepare_GSM8K.py  prepare_GSM8KPlatinum.py  prepare_HLE.py  prepare_MATH.py  prepare_MATH500.py  (+11 more)
(+168 files in other folders)
