[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cot_eval"
version = "0.1"
description = "A package for evaluating Chain-of-Thought reasoning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Add dependencies here, e.g.:
    "torch==2.5.1",
    "transformers==4.49.0",
    "vllm==0.7.3",
    "antlr4-python3-runtime==4.9.3",
    "math-verify>=0.6.2",
    "colorama==0.4.6",
    "accelerate>=0.26.0",
]

[tool.setuptools]
packages = ["cot_eval"]
